--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.daniel.eirik.assistant.MainActivity">
+    
+    
 
 
     <ImageView
@@ -96,6 +98,10 @@
                 android:textSize="17dp"
                 android:layout_below="@+id/imageView"
                 android:layout_alignParentStart="true" />
+            
+            <ImageButton
+                android:layout_width=""
+                android:layout_height="" />
 
 
         </RelativeLayout>
