--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/backass"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
         </RelativeLayout>
 
     </ScrollView>
