--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,10 @@
                 android:layout_below="@+id/imageView"
                 android:layout_alignParentStart="true" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -98,10 +102,7 @@
                 android:textSize="17dp"
                 android:layout_below="@+id/imageView"
                 android:layout_alignParentStart="true" />
-            
-            <ImageButton
-                android:layout_width=""
-                android:layout_height="" />
+
 
 
             <ImageButton
